Agent query: Is the product name checker working with improved offensive content detection?

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,8 @@ readme = "README.md"
 python = "^3.11"
 flask = "^3.0.3"
 googletrans = "3.1.0a0"
+spacy = "^3.7.6"
+en-core-web-sm = {url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.7.0/en_core_web_sm-3.7.0-py3-none-any.whl"}
 
 
 [build-system]
