--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ flask = "^3.0.3"
 googletrans = "3.1.0a0"
 spacy = "^3.7.6"
 en-core-web-sm = {url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.7.0/en_core_web_sm-3.7.0-py3-none-any.whl"}
+nltk = "^3.9.1"
 
 
 [build-system]
