--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ spacy = "^3.7.6"
 en-core-web-sm = {url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.7.0/en_core_web_sm-3.7.0-py3-none-any.whl"}
 nltk = "^3.9.1"
 jellyfish = "^1.1.0"
+google-generativeai = "^0.8.1"
 
 
 [build-system]
