Agent query: Can you test the product name checker with the word 'Puta' (which is offensive in Spanish) and verify if the LLM analysis is displayed correctly?

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ en-core-web-sm = {url = "https://github.com/explosion/spacy-models/releases/down
 nltk = "^3.9.1"
 jellyfish = "^1.1.0"
 google-generativeai = "^0.8.1"
+tenacity = "^9.0.0"
 
 
 [build-system]
